travis added lib(32)stdc++-7-dev from ubuntu-toolchain-r-test
Reference:
https://stackoverflow.com/questions/52674349/c17-code-not-compiling-on-travis-with-clang-6-0

Travis uses Ubuntu 14.04 which does not have libstdc++-7-*

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: lisp
 sudo: required
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - libstdc++-7-dev
+      - lib32stdc++-7-dev
 env:
   matrix:
     - LISP=abcl
