using fiveam for testing; added a failing test
failing test refers to https://github.com/libre-man/unix-opts/issues/22

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ before_script:
   - echo "(defsystem :dummy-cl-travis-system)" > ~/lisp/dummy-cl-travis-system.asd
 
 script:
-  - cl -e '(asdf:load-system :unix-opts-tests)
-           (unix-opts:run-tests)'
+  - cl -e '(asdf:test-system :unix-opts)'
     [ $? -eq 1 ]
 
 notifications:
