--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: lisp
 sudo: required
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - libstdc++-7-dev
+      - lib32stdc++-7-dev
+
 env:
   matrix:
     - LISP=abcl
-    - LISP=sbcl
+    - LISP=sbcl COVERALLS=true
     - LISP=sbcl32
     - LISP=ccl
     - LISP=ccl32
@@ -20,16 +28,11 @@ install:
     then
       ./install.sh;
     else
-      curl https://raw.githubusercontent.com/luismbo/cl-travis/master/install.sh | sh;
+      curl https://raw.githubusercontent.com/sionescu/cl-travis/master/install.sh | sh;
     fi
 
-before_script:
-  - echo "(defsystem :dummy-cl-travis-system)" > ~/lisp/dummy-cl-travis-system.asd
-
 script:
-  - cl -e '(asdf:load-system :unix-opts-tests)
-           (unix-opts:run-tests)'
-    [ $? -eq 1 ]
+  - ./run-tests.bash
 
 notifications:
   email: false
