--- a/.travis.yml
+++ b/.travis.yml
@@ -30,14 +30,10 @@ before_script:
   - echo "(defsystem :dummy-cl-travis-system)" > ~/lisp/dummy-cl-travis-system.asd
 
 install:
-  - if [ -x ./install.sh ] && head -2 ./install.sh | grep '^# cl-travis' > /dev/null;
-    then
-      ./install.sh;
-    else
-      curl https://raw.githubusercontent.com/sionescu/cl-travis/master/install.sh | sh;
-    fi
-  - cl -e '(ql:update-all-dists :prompt nil)'
-  - git clone https://github.com/fukamachi/cl-coveralls ~/lisp/cl-coveralls
+  # Install Roswell
+  - curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
+  - ros asdf install
+  - ros -e '(ql:update-all-dists :prompt nil)'
 
 script:
   - ./run-tests.bash
