--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ env:
   matrix:
     - LISP=abcl
     - LISP=sbcl-bin COVERALLS=true
+      # This uses an older version of sbcl, and tests without instrumentation
+    - LISP=sbcl
     - LISP=sbcl32
     - LISP=ccl
     - LISP=ccl32
